-------------------------------------
    5.0-3
-------------------------------------

-------------------------------------
    5.0-2   2015-08-12
-------------------------------------
Translation fixes

Fixed error when creating host-only networks

Fixed host-only network DHCP server settings

Fix USB device attaching / detaching from Settings menu of a
running VM.

-------------------------------------
    5.0-1   2015-08-05
-------------------------------------
Fix paths in recovery.php-disabled

Fix Content-type header in api.php

Fix add medium button context menu in VM settings

Fix RDP link

Fix bug when changing password

Removed unused OnAdditionsStateChanged event

Change in the way Windows drive list is obtained

Fixed errors manipulating groups when $phpVboxGroups is set

-------------------------------------
    5.0-0	2015-07-18
-------------------------------------
VirtualBox 5.0 compatibility.

Progress operations are now listed in order of creation from top
top bottom.
 
-------------------------------------
	4.3-3	2015-04-04
-------------------------------------
Added 2d/3d video acceleration configuration options in VM
settings

Fixed guest OS icon for Linux 2.6 (32-bit)

Added $eventListenerTimeout configuration option.

Upgraded jQuery to 1.11.2 and jQuery-ui to 1.11.4

-------------------------------------
	4.3-2	2014-12-16
-------------------------------------

Updated documentation to remove all googlecode.com references.

Changing the guest OS type now updates LongMode CPU Feature of VM.
https://sourceforge.net/p/phpvirtualbox/bugs/31/

Removed phptest.php and related check to see if PHP parsing works
correctly. This gives a false negative result in some browsers
/ web server configurations.
https://sourceforge.net/p/phpvirtualbox/bugs/32/

Copied missing image from VirtualBox src.

Fixed bug that would incorrectly determine the name of some images
causing 404s in web server logs and broken images.
