@@ -207,7 +207,7 @@ if($request['dir'] == DSEP && count($allowed_folders)) {
 
 }
 
-header('Content-type', 'application/json');
+header('Content-type: application/json');
 echo(json_encode($returnData));
 
 
